Update java bench